--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.jennifergarcia.proyectoda.AdminActivity">
+    tools:context="com.example.jennifergarcia.proyectoda.RecuperarActivity">
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
@@ -21,21 +21,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="match_parent"
-                android:layout_height="85dp"
-                android:id="@+id/imagen"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/sesion"
-                android:layout_marginBottom="10dp"
-                app:civ_border_width="2dp"
-                app:civ_border_color="@color/colorAccent">
-            </de.hdodenhof.circleimageview.CircleImageView>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/colorAzul"
-                android:text="Ingrese credenciales"
+                android:text="Recuperar contraseña"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:layout_marginTop="20dp"
@@ -66,36 +56,12 @@
                     android:layout_height="wrap_content"/>
 
             </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textColorHint="@color/colorAzul"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:hint="Contraseña">
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/password"
-                    android:textStyle="bold"
-                    android:textColorHint="@color/colorAzul"
-                    android:textColor="@color/colorAzul"
-                    android:textColorLink="@color/colorAzul"
-                    android:singleLine="true"
-                    android:gravity="center_horizontal"
-                    android:inputType="textPassword"
-                    android:theme="@color/colorBoton1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </android.support.design.widget.TextInputLayout>
-
             <Button
-                android:id="@+id/btnEnviar"
+                android:id="@+id/btnRecuperar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorBoton1"
-                android:text="Iniciar Sesion"
+                android:text="Recuperar contraseña"
                 android:textColor="#ffff"
                 android:textStyle="bold"
                 android:layout_marginRight="10dp"
@@ -104,21 +70,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_centerHorizontal="true" />
 
-            <Button
-                android:id="@+id/recuperar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorBoton2"
-                android:text="Recuperar Contraseña"
-                android:layout_marginBottom="20dp"
-                android:textColor="#ffff"
-                android:textStyle="bold"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_centerHorizontal="true"/>
-
         </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
 </android.support.v4.widget.NestedScrollView>
