--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#ffe070</color>
     <color name="colorPrimaryDark">#ffd15c</color>
     <color name="colorAccent">#6495ed</color>
-    <color name="letraPrincipal">#ffffff</color>>
+    <color name="letraPrincipal">#ffffff</color>
+    <color name="colorBoton1">#a1a5b4</color>
+    <color name="colorBoton2">#405a6a</color>
+    <color name="colorAzul">#598ce3</color>
 </resources>
