--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -23,25 +23,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
+                android:id="@+id/textView2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="@color/colorAzul"
-                android:text="Llena el siguiente formulario"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="25dp"
                 android:layout_marginRight="15dp"
-                android:textSize="20dp">
-            </TextView>
-                <Button
+                android:layout_marginTop="60dp"
+                android:gravity="center"
+                android:text="Registra los datos"
+                android:textColor="@color/colorAzul"
+                android:textSize="20dp"
+                android:textStyle="bold"></TextView>
+
+            <Button
                     android:id="@+id/botton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorBoton2"
                     android:text="Generar ubicación"
-                    android:textColor="@color/colorAzul"
+                    android:textColor="#fff"
                     android:textStyle="bold"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="10dp"
@@ -70,45 +72,73 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"/>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorAzul"
-                android:text="Ingresa tu nombre"
-                android:textStyle="bold"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="25dp"
+                android:layout_marginRight="10dp"
+                android:textColor="@color/colorAzul"
                 android:layout_marginLeft="10dp"
-                android:textSize="20dp"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:text="Nombre completo"/>
+
             <EditText
-                android:id="@+id/txtAp"
+                android:id="@+id/txtNo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:textStyle="bold"
-                android:textColor="@color/colorAzul"
-                android:visibility="invisible"
+                android:textColor="#000"
                 android:textAlignment="center"
-                android:focusable="false"
+                android:inputType="number"
+                android:maxLength="5"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:textColor="@color/colorAzul"
+                android:layout_marginLeft="10dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:text="Descripción del lugar"/>
+
+            <EditText
+                android:id="@+id/txtDes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:textStyle="bold"
+                android:textColor="#000"
+                android:textAlignment="center"
+                android:inputType="number"
+                android:maxLength="3"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"/>
+
             <Button
                 android:id="@+id/btnEnviar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorBoton2"
                 android:text="Enviar"
-                android:textColor="@color/colorAzul"
+                android:textColor="#fff"
                 android:textStyle="bold"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_centerHorizontal="true" />
-
     </LinearLayout>
    </android.support.v7.widget.CardView>
 </android.support.v4.widget.NestedScrollView>
